# iomete-integrations

./: .gitignore  HANDOFF.md  pyproject.toml  pyrightconfig.json
.github/actions/dbt-iomete-setup/: action.yml
.github/ci/: dbt-iomete.env
.github/workflows/: dbt-iomete-post-release.yml  dbt-iomete-pr-check.yml  dbt-iomete-release.yml  iomete-airflow-plugin-pr-check.yml
dbt-iomete/: .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  requirements.txt  setup.py  tox.ini
dbt-iomete/dbt/adapters/iomete/: column.py  connections.py  impl.py  python_job.py  schema_service.py
dbt-iomete/dbt/include/iomete/: profile_template.yml
dbt-iomete/dbt/include/iomete/macros/: adapters.sql
dbt-iomete/scripts/ci/: README.md  provision.py  run-integration-tests.sh  teardown.py
dbt-iomete/scripts/ci/resources/: __init__.py  client.py  config.py  workflow.py
dbt-iomete/scripts/db-tests/: README.md  iomete_provision.py  iomete_teardown.py
dbt-iomete/scripts/db-tests/iomete_ci/: __init__.py  client.py  config.py  errors.py  state.py  workflow.py
dbt-iomete/tests/: README.md  conftest.py
dbt-iomete/tests/functional/adapter/: test_basic.py
dbt-iomete/tests/functional/adapter/incremental/: test_incremental_tblproperties.py
dbt-iomete/tests/integration/: base.py
dbt-iomete/tests/integration/snapshot_validations/: test_snapshot.py
dbt-iomete/tests/unit/: test_adapter.py  test_schema_service.py  utils.py
iomete-airflow-plugin/: .dockerignore  .gitignore  DEV.md  Dockerfile  Makefile  README.md  airflow.cfg  docker-compose.yaml  pyproject.toml
iomete-airflow-plugin/dags/: iomete_sequential_tasks.py  iomete_single_task.py  iomete_task_with_overrides.py
iomete-airflow-plugin/iomete_airflow_plugin/: __init__.py  hook.py  iomete_operator.py  plugin.py
iomete-airflow-plugin/tests/: test_iomete_operator.py
py-hive-iomete/: README.rst  dev_requirements.txt
