[project]
name = "iomete-airflow-plugin"
version = "3.0.1"
description = "An Airflow plugin for interacting with IOMETE platform."
authors = [
    {name = "IOMETE"}
]
keywords = ["iomete", "airflow", "airflow plugin"]
packages = [{ include = "iomete_airflow_plugin" }]
license = "Apache Software License 2.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "iomete-sdk (>=3.1.0,<4.0.0)",
    "requests (>=2.33.0)",          # CVE-2026-25645
    "apache-airflow (>=3.2.1,<4.0.0)",
    # Security floors for transitive deps (>= only, no upper caps) so pip-install users get patched versions:
    "urllib3 (>=2.7.0)",           # CVE-2026-44431 / CVE-2026-44432 (IE-626, IE-640)
    "idna (>=3.16)",               # CVE-2026-45409 (IE-686)
    "Mako (>=1.3.12)",             # CVE-2026-44307 (IE-556)
    "python-multipart (>=0.0.29)", # CVE-2026-42561 (IE-557)
]

[tool.poetry.plugins."airflow.plugins"]
iomete = "iomete_airflow_plugin.plugin:IometePlugin"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
bandit = "^1.7.5"
interrogate = ">=1.5.0, <2.0.0"
isort = ">=5.10.1,<7.0.0"
markdown = ">=3.4.0, <4.0.0"
mdformat-gfm = ">=0.3.5, <1.0.0"
mypy = "^1.8.0"
nbmake =  ">=1.4.3, <2.0.0"
setuptools = ">=80.0.0"
watchdog = "=6.0.0"
black = ">=26.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
color = true
exclude = ["setup.py", "docs", "build", "tests"]
fail-under = 10.0
generate-badge = "."
badge-format = "svg"
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-classes = true
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-regex = []
ignore-semiprivate = true
ignore-setters = true
omit-covered-files = true
quiet = false
verbose = 2
whitelist-regex = []

[tool.isort]
line_length = 120
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
